tests/negative/typecheck/dyn-type-not-found.orng
fn main() -> Int {
    let x: &dyn Mystery_Trait = (4, 5)
    5
}